# ara-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  run_tests.sh
.cargo/: config.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  docs.yml  labels.yml
Documentation/: architecture.md  phases.md  problem_statement.md  testing_strategy.md
Documentation/sprints/: sprint-01-correctness-traps.md  sprint-02-public-api-docs.md  sprint-03-tcp-transport.md  sprint-04-diagnostics-example.md  sprint-05-crates-io-release-prep.md  sprint-06-mdbook-docs-site.md  sprint-07-cross-compilation-and-yocto.md  sprint-08-vsomeip-interop-demo.md  sprint-09-cxx-bridge.md  sprint-10-benchmarks.md  sprint-11-field-support.md  sprint-12-error-recovery.md  sprint-13-codegen-cxx.md  sprint-14-multi-binding.md  sprint-15-community-launch.md
ara-com/: Cargo.toml  LICENSE-APACHE  README.md
ara-com-someip/: Cargo.toml  LICENSE-MIT  README.md
ara-com-someip/benches/: someip_benchmarks.rs
ara-com-someip/src/: config.rs  error.rs  lib.rs  proxy.rs  skeleton.rs
ara-com-someip/src/discovery/: message.rs  mod.rs
ara-com-someip/src/serialization/: dynamic.rs  fixed.rs  mod.rs
ara-com-someip/src/transport/: header.rs  mod.rs
ara-com-someip/tests/: loopback_integration.rs  sd_integration.rs  tcp_integration.rs  wire_compat.rs
ara-com/src/: error.rs  event.rs  field.rs  lib.rs  method.rs  proxy.rs  serialization.rs  service.rs  skeleton.rs  transport.rs  types.rs
cargo-arxml/: Cargo.toml  README.md
cargo-arxml/src/: config.rs  error.rs  lib.rs  main.rs
cargo-arxml/src/codegen/: mod.rs  proxy.rs  skeleton.rs  tests_gen.rs  traits.rs  types.rs
cargo-arxml/src/parser/: ir.rs  mod.rs
cargo-arxml/src/validator/: mod.rs
cargo-arxml/tests/: codegen_integration.rs  diagnostics_codegen.rs  probe_deployment_schema.rs  validator_tests.rs
cargo-arxml/tests/fixtures/: battery_service.arxml  diagnostics_service.arxml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/examples/: battery-service.md  diagnostics-service.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/guide/: architecture.md  codegen.md  cross-compilation.md  cxx-bridge.md  runtime.md  service-discovery.md  vsomeip-interop.md
docs/src/reference/: benchmarks.md  configuration.md  known-limitations.md  publish-order.md  support-matrix.md
examples/battery-service/: Cargo.toml
examples/battery-service/src/: lib.rs
examples/cxx-bridge/: Cargo.toml  build.rs
examples/cxx-bridge/src/: cxx_client.h  lib.rs  main.cpp  main.rs
examples/diagnostics-service/: Cargo.toml
interop/: Dockerfile.ara-rs  Dockerfile.vsomeip  README.md  docker-compose.yml  run.sh
interop/ara-rs-server/: main.rs
interop/vsomeip-client/: CMakeLists.txt  vsomeip_client.cpp  vsomeip_client.json
meta-ara-rs/: README.md
meta-ara-rs/conf/: layer.conf
meta-ara-rs/recipes-ara-rs/ara-com/: ara-com_0.1.0.bb
meta-ara-rs/recipes-ara-rs/ara-com-someip/: ara-com-someip_0.1.0.bb
meta-ara-rs/recipes-ara-rs/cargo-arxml/: cargo-arxml_0.1.0.bb
