[package]
name = "cargo-arxml"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ARXML parser, validator, and Rust code generator for Adaptive AUTOSAR"
keywords = ["autosar", "arxml", "code-generator", "automotive", "someip"]
categories = ["development-tools", "code-generators"]
repository = "https://github.com/ZiadAhmed9/ara-rs"
homepage = "https://github.com/ZiadAhmed9/ara-rs"

[[bin]]
name = "cargo-arxml"
path = "src/main.rs"

[dependencies]
autosar-data = "0.21"
autosar-data-abstraction = "0.10"
quote = "1"
proc-macro2 = "1"
syn = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
prettyplease = "0.2"

[dev-dependencies]
tempfile = "3"
