[package]
name = "battery-service-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ara-com = { path = "../../ara-com" }
ara-com-someip = { path = "../../ara-com-someip" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-core = "0.3"
